--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="content">
          <div class="content--body">
             <div class="content--body--block">
-                  <img src="images/ph3.png" style="max-width:360px;height:auto;" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
+                  <img src="images/ph3.png" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
                   <div class="content--body--block--text">
                      <h2>Biography</h2>
                      <p>I am a transplant to the Omaha area under the direction of Uncle Sam. I speak Korean and am currently serving as an <a href="https://www.airforce.com/careers/detail/airborne-cryptologic-language-analyst">Airborne Cryptologic Language Analyst</a> in the US Air Force. I am currently working on getting a BMS in Management Information Systems while serving, while my wife just completed her master's program in Marriage and Family Therapy at UNL. I can't let her get too far ahead of me, can I?</p>
@@ -38,7 +38,7 @@
                   </div>
             </div>
             <div class="content--body--block">
-               <img src="images/ph2.png" style="max-width:360px;height:auto;" alt="The website owner with sunglasses on relaxing in a hammock." />
+               <img src="images/ph2.png" alt="The website owner with sunglasses on relaxing in a hammock." />
                <div class="content--body--block--text">
                   <h2>Education</h2>
                   <ul>
