--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
    <body>
       <header>
          <h1 class="header--left">Phil</h1>
-         <img src="images/ph1.png" id="headerImg" style="width:180px;height:180px" alt="A picture of the website owner, smiling." />
+         <img src="images/ph1.png" alt="A picture of the website owner, smiling." />
          <h1 class="header--right">Hansen</h1>
       </header>
       <nav>
@@ -28,13 +28,13 @@
       <div class="content">
             <div class="content--body">
                <div class="content--body--block">
-                     <img src="images/keyboard.png" style="max-width:240px;height:auto;" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
+                     <img src="images/keyboard.png" style="max-width:240px;" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
                      <div class="content--body--block--text">
                         <h2>Let's get in touch</h2>
                         <p>I prefer email communication. I can be reached any time, any place, and check it often.</p>
-                        <a href="mailto:philliphansen@unomaha.edu"><img src="images/email_sm.png" style="width:24px;height:24px;margin:0px;" alt="A mail envelope."/>philliphansen@unomaha.edu</a>
+                        <a href="mailto:philliphansen@unomaha.edu"><img src="images/email_sm.png" class="contact--link-ico" alt="A mail envelope."/>philliphansen@unomaha.edu</a>
                         <p>I also have a GitHub account where I house my school code projects as well as some hobby works that you are welcome to check out.</p>
-                        <a href="https://github.com/phillipphansen"><img src="images/github_sm.png"  style="width:24px;height:24px;margin:0px;" alt="The logo of the GitHub website."/>https://github.com/phillipphansen</a>
+                        <a href="https://github.com/phillipphansen"><img src="images/github_sm.png" class="contact--link-ico" alt="The logo of the GitHub website."/>https://github.com/phillipphansen</a>
                      </div>
                </div>
             </div>
