--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <body>
       <header>
          <h1 class="header--left">Phil</h1>
-         <img src="images/ph1.png" style="max-width:180px;height:auto;" alt="The website owner's face, smiling." />
+         <img src="images/ph1.png" alt="The website owner's face, smiling." />
          <h1 class="header--right">Hansen</h1>
       </header>
       <nav>
