--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <div class="content">
             <div class="content--body">
                <div class="content--body--block">
-                     <img src="images/keyboard.png" style="max-width:240px;" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
+                     <img src="images/keyboard.png" style="max-width:240px;min-width:120px;" alt="The website owner in a green Air Force flight suit standing in front of a military aircraft." />
                      <div class="content--body--block--text">
                         <h2>Let's get in touch</h2>
                         <p>I prefer email communication. I can be reached any time, any place, and check it often.</p>
