--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
    Name:   Phil Hansen
    Class:  ISQA 3900
    Desc:   A project webpage for class
+   Date:   14 Jan 2019
 -->
 <html lang="en">
    <head>
@@ -42,7 +43,7 @@
       <footer>
          <p>This site and it's associated code is licensed under the <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3.0</a></p>
          <address>Contact page administrator: <a href="mailto:philliphansen@unomaha.edu">philliphansen@unomaha.edu</a>.</address>
-         <p>Last updated 13 Jan 2019</p>
+         <p>Last updated 14 Jan 2019</p>
       </footer>
    </body>
 </html>
